# leetcode CMakeLists.txt

# 283. 移动0
add_subdirectory(283-moveZeroes)

# 27. 移除元素
add_subdirectory(27-removeElement)

# 26. 删除排序数组中的重复项
add_subdirectory(26-removeDuplicates)

# 80. 删除排序数组中的重复项 II
add_subdirectory(80-removeDuplicates)

# 75. 颜色分类
add_subdirectory(75-sortColors)

# 88. 合并两个有序数组
add_subdirectory(88-merge)

# 215. 数组中的第K个最大元素
add_subdirectory(215-findKthLargest)

# 167. 两数之和 II - 输入有序数组
add_subdirectory(167-twoSum)

# 125. 验证回文串
add_subdirectory(125-isPalindrome)

# 344. 反转字符串
add_subdirectory(344-reverseString)

# 345. 反转字符串中的元音字母
add_subdirectory(345-reverseVowels)

# 11. 盛最多水的容器
add_subdirectory(11-maxArea)