# leetcode CMakeLists.txt

add_subdirectory(00-everyday)
add_subdirectory(01-array)
add_subdirectory(02-list)
add_subdirectory(03-stack)
add_subdirectory(04-queue)
add_subdirectory(search)
add_subdirectory(binaryTree)
add_subdirectory(recursion)
add_subdirectory(dp)
add_subdirectory(greedy)
add_subdirectory(9999-template)