# leetcode CMakeLists.txt

add_subdirectory(00-everyday)
add_subdirectory(01-array)
add_subdirectory(02-list)
add_subdirectory(03-stack)
add_subdirectory(04-queue)
add_subdirectory(05-search)
add_subdirectory(07-binaryTree)
add_subdirectory(06-dfs)
add_subdirectory(08-dp)
add_subdirectory(09-greedy)