# everyday CMakeLists.txt

# 1047. 删除字符串中的所有相邻重复项
add_subdirectory(1047-removeDuplicates)

# 224. 基本计算器
add_subdirectory(224-calculate)

# 227. 基本计算器 II
add_subdirectory(227-calculate)

# 331. 验证二叉树的前序序列化
add_subdirectory(331-isValidSerialization)

# 705. 设计哈希集合
add_subdirectory(705-MyHashSet)

# 73. 矩阵置零
add_subdirectory(73-setZeroes)