# 05-search CMakeLists.txt

# 349. 两个数组的交集
add_subdirectory(349-intersection)

# 350. 两个数组的交集 II
add_subdirectory(350-intersect)

# 242. 有效的字母异位词
add_subdirectory(242-isAnagram)

# 202. 快乐数
add_subdirectory(202-isHappy)

# 290. 单词规律
add_subdirectory(290-wordPattern)

# 205. 同构字符串
add_subdirectory(205-isIsomorphic)

# 451. 根据字符出现频率排序
add_subdirectory(451-frequencySort)

# 1. 两数之和
add_subdirectory(1-twoSum)

# 15. 三数之和
add_subdirectory(15-threeSum)

# 18. 四数之和
add_subdirectory(18-fourSum)

# 16. 最接近的三数之和
add_subdirectory(16-threeSumClosest)

# 454. 四数相加 II
add_subdirectory(454-fourSumCount)

# 49. 字母异位词分组
add_subdirectory(49-groupAnagrams)

# 447. 回旋镖的数量
add_subdirectory(447-numberOfBoomerangs)

# 149. 直线上最多的点数
add_subdirectory(149-maxPoints)

# 219. 存在重复元素 II
add_subdirectory(219-containsNearbyDuplicate)

# 217. 存在重复元素
add_subdirectory(217-containsDuplicate)

# 220. 存在重复元素 III
add_subdirectory(220-containsNearbyAlmostDuplicate)