# 06-dfs CMakeLists.txt

# 递归与回溯法（树形问题）
# 17, 93， 131，

# 排列问题
# 46， 47

# 组合问题-----优化（剪枝）
# 77， 39， 40， 216， 78， 90， 401

# 二维平面的回溯法   floodfill算法
# 79， 200， 130, 417

# 回溯法---解决经典人工智能问题
# 51， 52， 37

# 1688. 比赛中的配对次数
add_subdirectory(1688-numberOfMatches)

# 17. 电话号码的字母组合
add_subdirectory(17-letterCombinations)

# 93. 复原 IP 地址
add_subdirectory(93-restoreIpAddresses)

# 131. 分割回文串
add_subdirectory(131-partition)

# 46. 全排列
add_subdirectory(46-permute)

# 47. 全排列 II
add_subdirectory(47-permuteUnique)

# 77. 组合
add_subdirectory(77-combine)

# 39. 组合总和
add_subdirectory(39-combinationSum)

# 40. 组合总和 II
add_subdirectory(40-combinationSum2)

# 216. 组合总和 III
add_subdirectory(216-combinationSum3)

# 78. 子集
add_subdirectory(78-subsets)

# 90. 子集 II
add_subdirectory(90-subsetsWithDup)

# 401. 二进制手表
add_subdirectory(401-readBinaryWatch)

# 79. 单词搜索
add_subdirectory(79-exist)

# 200. 岛屿数量
add_subdirectory(200-numIslands)

# 130. 被围绕的区域
add_subdirectory(130-solve)

# 417. 太平洋大西洋水流问题
add_subdirectory(417-pacificAtlantic)

# 51. N 皇后
add_subdirectory(51-solveNQueens)

# 52. N皇后 II
add_subdirectory(52-totalNQueens)

# 37. 解数独
add_subdirectory(37-solveSudoku)