# 07-binaryTree CMakeLists.txt

# 二叉树---二叉树的所有操作
# 104， 226， 100， 101， 222， 110

# 注意递归的终止条件
# 112, 111, 404

# 定义递归问题
# 257, 113, 129

# 复杂的递归逻辑
# 437，

# 二分搜索树---二分搜索树的基本操作
# 235， 98， 450， 108， 230， 236

# 104. 二叉树的最大深度
add_subdirectory(104-maxDepth)

# 111. 二叉树的最小深度
add_subdirectory(111-minDepth)

# 226. 翻转二叉树
add_subdirectory(226-invertTree)

# 100. 相同的树
add_subdirectory(100-isSameTree)

# 101. 对称二叉树
add_subdirectory(101-isSymmetric)

# 222. 完全二叉树的节点个数
add_subdirectory(222-countNodes)

# 110. 平衡二叉树
add_subdirectory(110-isBalanced)

# 112. 路径总和
add_subdirectory(112-hasPathSum)

# 404. 左叶子之和
add_subdirectory(404-sumOfLeftLeaves)

# 257. 二叉树的所有路径
add_subdirectory(257-binaryTreePaths)

# 113. 路径总和 II
add_subdirectory(113-pathSum)

# 129. 求根节点到叶节点数字之和
add_subdirectory(129-sumNumbers)

# 437. 路径总和 III
add_subdirectory(437-pathSum)

# 98. 验证二叉搜索树
add_subdirectory(98-isValidBST)

# 450. 删除二叉搜索树中的节点
add_subdirectory(450-deleteNode)

# 108. 将有序数组转换为二叉搜索树
add_subdirectory(108-sortedArrayToBST)

# 230. 二叉搜索树中第K小的元素
add_subdirectory(239-kthSmallest)