# 08-dp CMakeLists.txt

# 70， 120， 64，

# 发现重叠子问题
# 343， 279， 91， 62， 63

# 状态和状态转移
# 198， 213， 337， 309

# 0-1背包问题
# 416， 322， 377， 474， 139， 494，

# 最长上升子序列
# 300， 376

# 最长公共子序列LCS，最短路径

# 70. 爬楼梯
add_subdirectory(70-climbStairs)

# 120. 三角形最小路径和
add_subdirectory(120-minimumTotal)

# 64. 最小路径和
add_subdirectory(64-minPathSum)

# 343. 整数拆分
add_subdirectory(343-integerBreak)

# 279. 完全平方数
add_subdirectory(279-numSquares)

# 91. 解码方法
add_subdirectory(91-numDecodings)

# 62. 不同路径
add_subdirectory(62-uniquePaths)

# 63. 不同路径 II
add_subdirectory(63-uniquePathsWithObstacles)

# 198. 打家劫舍
add_subdirectory(198-rob)

# 213. 打家劫舍 II
add_subdirectory(213-rob)

# 337. 打家劫舍 III
add_subdirectory(337-rob)

# 309. 最佳买卖股票时机含冷冻期
add_subdirectory(309-maxProfit)

# 416. 分割等和子集
add_subdirectory(416-canPartition)

# 322. 零钱兑换
add_subdirectory(322-coinChange)

# 377. 组合总和 Ⅳ
add_subdirectory(377-combinationSum4)

# 474. 一和零
add_subdirectory(474-findMaxForm)

# 139. 单词拆分
add_subdirectory(139-wordBreak)

# 494. 目标和
add_subdirectory(494-findTargetSumWays)

# 300. 最长递增子序列
add_subdirectory(300-lengthOfLIS)

# 376. 摆动序列
add_subdirectory(376-wiggleMaxLength)