# array CMakeLists.txt

###### 数组常用解法(双索引技术(对撞指针)，(滑动窗口))

# 283. 移动0
add_subdirectory(283-moveZeroes)

# 27. 移除元素
add_subdirectory(27-removeElement)

# 26. 删除排序数组中的重复项
add_subdirectory(26-removeDuplicates)

# 80. 删除排序数组中的重复项 II
add_subdirectory(80-removeDuplicates)

# 75. 颜色分类
add_subdirectory(75-sortColors)

# 88. 合并两个有序数组
add_subdirectory(88-merge)

# 215. 数组中的第K个最大元素
add_subdirectory(215-findKthLargest)

# 167. 两数之和 II - 输入有序数组
add_subdirectory(167-twoSum)

# 125. 验证回文串
add_subdirectory(125-isPalindrome)

# 344. 反转字符串
add_subdirectory(344-reverseString)

# 345. 反转字符串中的元音字母
add_subdirectory(345-reverseVowels)

# 11. 盛最多水的容器
add_subdirectory(11-maxArea)

# 209. 长度最小的子数组
add_subdirectory(209-minSubArrayLen)

# 3. 无重复字符的最长子串
add_subdirectory(3-lengthOfLongestSubstring)

# 438. 找到字符串中所有字母异位词
add_subdirectory(438-findAnagrams)

# 76. 最小覆盖子串
add_subdirectory(76-minWindow)