# list CMakeLists.txt

#  链表穿针引线（节点之间）

# 链表常规
# 206, 92， 83， 86， 328， 2， 445

# 设立链表的虚拟头结点
# 203， 82， 21， 24， 25， 147， 148

# 特殊情况改变节点的值
# 237,

# 链表与双指针
# 19， 61， 143， 234

# 206. 反转链表
add_subdirectory(206-reverseList)

# 92. 反转链表 II
add_subdirectory(92-reverseBetween)

# 83. 删除排序链表中的重复元素
add_subdirectory(83-deleteDuplicates)

# 86. 分隔链表
add_subdirectory(86-partition)