# list CMakeLists.txt

#  链表穿针引线（节点之间）

# 链表常规
# 206, 92， 83， 86， 328， 2， 445

# 设立链表的虚拟头结点
# 203， 82， 21， 24， 25， 147， 148

# 特殊情况改变节点的值
# 237,

# 链表与双指针
# 19， 61， 143， 234

# 206. 反转链表
add_subdirectory(206-reverseList)

# 92. 反转链表 II
add_subdirectory(92-reverseBetween)

# 83. 删除排序链表中的重复元素
add_subdirectory(83-deleteDuplicates)

# 86. 分隔链表
add_subdirectory(86-partition)

# 328. 奇偶链表
add_subdirectory(328-oddEvenList)

# 2. 两数相加
add_subdirectory(2-addTwoNumbers)

# 445. 两数相加 II
add_subdirectory(445-addTwoNumbers)

# 203. 移除链表元素
add_subdirectory(203-removeElements)

# 82. 删除排序链表中的重复元素 II
add_subdirectory(82-deleteDuplicates)

# 21. 合并两个有序链表
add_subdirectory(21-mergeTwoLists)

# 24. 两两交换链表中的节点
add_subdirectory(24-swapPairs)

# 25. K 个一组翻转链表
add_subdirectory(25-reverseKGroup)

# 147. 对链表进行插入排序
add_subdirectory(147-insertionSortList)

# 148. 排序链表
add_subdirectory(148-sortList)

# 237. 删除链表中的节点
add_subdirectory(237-deleteNode)

# 19. 删除链表的倒数第 N 个结点
add_subdirectory(19-removeNthFromEnd)

# 61. 旋转链表
add_subdirectory(61-rotateRight)

# 143. 重排链表
add_subdirectory(143-reorderList)

# 234. 回文链表
add_subdirectory(234-isPalindrome)